Closed Bug 361399 Opened 18 years ago Closed 18 years ago

Crash [@ LocationStep::getAxisIdentifier] at Yahoo! Mail Beta on trunk

Categories

(Core :: XSLT, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: sicking)

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

These talkback reports are mentioning that the new Yahoo Mail Beta is crashing on trunk: http://talkback-public.mozilla.org/search/start.jsp?search=1&searchby=stacksig&match=contains&searchfor=txXPathOptimizer::optimizePath&vendor=MozillaOrg&product=FirefoxTrunk&platform=All&buildid=&sdate=&stime=&edate=&etime=&sortby=bbid I can reproduce this in my debug build: First 3 lines of backtrace in my debug build: #0 0x03f0487e in LocationStep::getAxisIdentifier (this=0x14f7efe4) at c:/mozilla/mozilla/content/xslt/src/xpath/txExpr.h:635 #1 0x03ce26f5 in txXPathOptimizer::optimizePath (this=0x22d897, aInExpr=0x14f7eff8, aOutExpr=0x22d8b4) at c:/mozilla/mozilla/content/xslt/src/xpath/txXPathOptimizer.cpp:136 #2 0x03ce23b5 in txXPathOptimizer::optimize (this=0x22d897, aInExpr=0x14f7eff8, aOutExpr=0x22d8b4) at c:/mozilla/mozilla/content/xslt/src/xpath/txXPathOptimizer.cpp:73 #3 0x03cd5c81 in txExprParser::createExprInternal (aExpression=@0x22d94c, aSubStringPos=0, aContext=0x22d96c, aExpr=0x22d98c) at c:/mozilla/mozilla/content/xslt/src/xpath/txExprParser.cpp:212 Getting a minimised testcase is probably very difficult. I'll try to come up with a regression range later today. If anyone wants to have my login data, please ask me, and I'll provide them.
No need for regression window, i know what's wrong here.
Assignee: xslt → bugmail
Attached patch Patch to fixSplinter Review
Oops
Attachment #246211 - Flags: superreview?(peterv)
Attachment #246211 - Flags: review?(peterv)
Attachment #246211 - Flags: superreview?(peterv)
Attachment #246211 - Flags: superreview+
Attachment #246211 - Flags: review?(peterv)
Attachment #246211 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Crash Signature: [@ LocationStep::getAxisIdentifier]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: