Bug 361399: txXPathOptimizer::optimizePath is horked. r/sr=peterv